# docs/swagger.json
@@ -20,9 +20,6 @@
         "/actors/": {
             "get": {
                 "description": "Получить список всех актёров",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -113,9 +110,6 @@
         "/actors/{id}/": {
             "get": {
                 "description": "Получить данные об актёре по его ID",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -161,9 +155,6 @@
             },
             "delete": {
                 "description": "Удалить данные об актёре по его ID",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -266,6 +257,60 @@
             }
         },
         "/movies/": {
+            "get": {
+                "description": "Получить список всех фильмов\nЕсли порядок сортировки не указан, для каждого типа есть порядок по умолчанию:\nДля названия и даты возрастающий, для рейтинга - убывающий",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movies"
+                ],
+                "summary": "Получить список фильмов",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Тип сортировки (0 - название, 1 - рейтинг, 2 - дата выпуска)",
+                        "name": "sortType",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Порядок сортировки (0 - возрастающий, 1 - убывающий)",
+                        "name": "sortOrder",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список фильмов",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.Movie"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -344,7 +389,7 @@
                     "200": {
                         "description": "Список результатов",
                         "schema": {
-                            "$ref": "#/definitions/dto.SearchResult"
+                            "$ref": "#/definitions/entities.SearchResult"
                         }
                     },
                     "400": {
@@ -419,9 +464,6 @@
             },
             "delete": {
                 "description": "Удалить данные об фильме по его ID",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -522,65 +564,6 @@
                     }
                 }
             }
-        },
-        "/movies/{type}/{order}/": {
-            "get": {
-                "description": "Получить список всех фильмов\nЕсли порядок сортировки не указан, для каждого типа есть порядок по умолчанию:\nДля названия и даты возрастающий, для рейтинга - убывающий",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "movies"
-                ],
-                "summary": "Получить список фильмов",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Тип сортировки (0 - название, 1 - рейтинг, 2 - дата выпуска)",
-                        "name": "sortType",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Порядок сортировки (0 - возрастающий, 1 - убывающий)",
-                        "name": "sortOrder",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Список фильмов",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entities.Movie"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/apperrors.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/apperrors.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/apperrors.ErrorResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -591,6 +574,28 @@
                     "type": "integer"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ActorInfo": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.MovieInfo": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
@@ -631,23 +636,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "dto.SearchResult": {
-            "type": "object",
-            "properties": {
-                "actors": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.Actor"
-                    }
-                },
-                "movies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.Movie"
-                    }
                 }
             }
         },
@@ -699,7 +687,13 @@
         "entities.Actor": {
             "type": "object",
             "properties": {
-                "birthDate": {
+                "actor_movies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.MovieInfo"
+                    }
+                },
+                "dob": {
                     "type": "string"
                 },
                 "gender": {
@@ -707,12 +701,6 @@
                 },
                 "id": {
                     "type": "integer"
-                },
-                "movies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.Movie"
-                    }
                 },
                 "name": {
                     "type": "string"
@@ -722,33 +710,45 @@
         "entities.Movie": {
             "type": "object",
             "properties": {
-                "actors": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.Actor"
-                    }
-                },
                 "description": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
+                "movie_actors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ActorInfo"
+                    }
+                },
                 "rating": {
                     "type": "number"
                 },
-                "releaseDate": {
+                "release_date": {
                     "type": "string"
                 },
                 "title": {
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        },
+        "entities.SearchResult": {
+            "type": "object",
+            "properties": {
+                "actors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Actor"
+                    }
+                },
+                "movies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Movie"
+                    }
+                }
+            }
         }
     }
 }
